Add movieUrl attr on movie entity
