# src/routes/index.js
@@ -6,6 +6,7 @@ const router = express.Router()
 
 // movies
 router.get('/movies', movieController.getMovies);
+router.get('/movies/:id', movieController.getMovieById);
 router.post('/movies', movieController.postMovie);
 router.patch('/movies/:id', movieController.patchMovie);
 
